--- a/community-user/community/project.config.json
+++ b/community-user/community/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.1",
-	"appid": "wx0b2cbb74b494c8dc",
+	"appid": "wx1dfd978ac41d27e7",
 	"projectname": "community",
 	"debugOptions": {
 		"hidedInDevtools": []
