ignore appid 配置文件

--- a/community-user/community/project.config.json
+++ b/community-user/community/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.1",
-	"appid": "wx1dfd978ac41d27e7",
+	"appid": "wxdeffb4a62d3ed7dc",
 	"projectname": "community",
 	"debugOptions": {
 		"hidedInDevtools": []
