--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 community-user/community/project.config.json
+community-server/community/project.config.json
 server/wx_class_project/.idea/workspace.xml
 *.class
